--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "storyblok-js-client": "^2.5.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "react-scripts": "^3.4.1"
   },
   "scripts": {
@@ -56,7 +57,9 @@
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
