--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-chat-bubble": "^0.8.7",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "4.0.5",
