--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@react-google-maps/api": "^1.9.12",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "enzyme": "^3.11.0",
@@ -47,6 +48,7 @@
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "4.0.5",
+    "redux-thunk": "^2.3.0",
     "storyblok-js-client": "^2.5.2"
   },
   "devDependencies": {
