--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^3.11.0",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-text-mask": "^5.4.3",
     "redux": "4.0.5",
     "redux-thunk": "^2.3.0",
     "storyblok-js-client": "^2.5.2"
